envoy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mass-envoy
  labels:
    app: mass-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mass-envoy
  template:
    metadata:
      labels:
        app: mass-envoy
    spec:
      containers:
      - name: mass-envoy
        image: "gcr.io/mass-276203/envoy:dev"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: envoy-admin
          containerPort: 9901
