envoy/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: mass-envoy
  labels:
    app: mass-envoy
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 30036
    protocol: TCP
  - name: admin
    protocol: TCP
    port: 9901
    targetPort: 9901
  selector:
    app: mass-envoy
