envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mass-envoy
  labels:
    app: mass-envoy
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    protocol: TCP
    port: 443
  - name: admin
    protocol: TCP
    port: 9901
  selector:
    app: mass-envoy
